--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 }
 
 html {
+  padding: 0;
+  margin: 0;
   font-size: 10px;
   font-family: 'Montserrat', sans-serif;
   scroll-behavior: smooth;
@@ -12,6 +14,7 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -42,4 +45,36 @@ code {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+/** ant design */
+
+*:not([class^='antd']) {
+  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  line-height: normal;
+}
+
+input:not([class^='antd']),
+select:not([class^='antd']),
+optgroup:not([class^='antd']),
+textarea:not([class^='antd']) {
+  line-height: normal;
+}
+
+p:not([class^='antd']) {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+button:not([class^='antd']) {
+  appearance: button;
+  text-rendering: auto;
+  text-shadow: none;
+  display: inline-block;
+  align-items: flex-start;
+  cursor: pointer;
+  box-sizing: border-box;
 }
